# Interactive-Feedback-MCP

./: .cursorrules  .gitignore  EXTENDED_PARAMS_USAGE.md  Interactive_Feedback_MCP_Rules_V7.0.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SESSION_METRICS_GUIDE.md  caller_source_test_report.md  cursor_rules_v7.md  cursor_rules_v8.1.md  demo_animated_ui.py  demo_app_with_icon.py  demo_config_management.py  demo_enhanced_ui.py  demo_image_preview.py  demo_integrated_system.py  demo_refactored_ui.py  demo_shortcut_test.py  demo_three_column.py  enhanced_feedback_ui.py  feedback_report_20250613_154828.json  feedback_ui.py  logging_config.json  manage_logs.py  manual_test_caller_source.py  markdown_title_troubleshooting.md  prd.md  pyproject.toml  rules.md  server.py  session_analysis_tool.py  session_integration.py  session_metrics_collector.py  simple_test_caller_source.py  test_emoji_fix.py  test_enhanced_markdown.py  test_extended_params.py  test_ime_fix.py  (+4 more)
.cursor/rules/: rule.mdc
bak/: feedback_ui.py  feedback_ui_new.py
tests/: __init__.py  test_ui_components.py
ui/: README.md  __init__.py
ui/components/: __init__.py  data_visualization.py  enhanced_markdown_renderer.py  main_window.py  text_processing.py  three_column_layout.py  visual_config_manager.py
ui/resources/: icon_generator.py  icon_manager.py
ui/styles/: __init__.py  dark_theme.py  enhanced_glassmorphism.py  enhanced_theme_manager.py  glassmorphism.py  modern_glassmorphism.py
ui/utils/: advanced_interactions.py  animations.py  config_manager.py  logging_system.py  performance.py  (+1 more)
(+2 files in other folders)
