[project]
name = "interactive-feedback-mcp"
version = "0.1.2"
description = "MCP server for interactive user feedback and command execution in AI-assisted development, by Fábio Ferreira and Pau Oliva."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.5.1",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
    "markdown>=3.4.0",
]
